# uvOptifit

./: datasets.py  dbscan_main.py  models.py  pyproject.toml  pysindy_average_psd.py  pysindy_collate.py  pysindy_debug.py  pysindy_main.py  pytorch_collate.py  pytorch_main.py  run_contrastive_loss.py  scratchpad.ipynb
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_3/: hparams.yaml  metrics.csv
lightning_logs/version_4/: hparams.yaml  metrics.csv
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_5/checkpoints/: epoch=9-step=430.ckpt
