[project]
name = "uvoptifit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emd-signal>=1.8.0",
    "h5py>=3.11.0",
    "lightning>=2.2.5",
    "matplotlib>=3.7.5",
    "numpy",
    "pandas>=2.0.3",
    "pysindy>=1.7.5",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "torch",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
